--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,4 +14,4 @@ theme: "xmin"
 
 params:
   description: "The poetry of Seth Daniel Leonard"
-  footer: "&copy; Seth Daniel Leonard 2024"
+  footer: ""
